[package]
name = "pusher-rs"
version = "0.1.0"
edition = "2021"
authors = ["chmod77 <shalom.nyende@gmail.com>"]
description = "A bullet-proof Rust crate for interacting with the Pusher Channels HTTP/WS API"
license = "MIT"
repository = ""



[dependencies]
async-trait = "0.1.81"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["full"] }
tokio-tungstenite = "0.23.1"
url = "2.5.2"
hmac = "0.12.1"
sha2 = "0.10.8"
futures-util = "0.3.30"
hex = "0.4.3"
base64 = "0.22.1"
md5 = "0.7.0"
log = "0.4.22"
aes = "0.8.4"
rand = "0.8.5"
cbc = "0.1.2"
dotenv = "0.15.0"
env_logger = "0.11.5"
once_cell = "1.19.0"

[dev-dependencies]
tokio-test = "0.4.4"
